--- a/css/input.css
+++ b/css/input.css
@@ -84,6 +84,10 @@ body {
     @apply w-full 1100px:w-[90%] max-w-[1400px] mx-auto px-[10px];
 }
 
+.wrapper-b {
+    @apply w-full 1100px:w-[90%] max-w-[1400px] mx-auto;
+}
+
 .main-button {
     font-family: 'Staatliches', sans-serif;
     cursor: pointer;
